# PAJ

./: .env-example  .gitignore  .zshrc  AGENTS.md  LICENSE  README.md  SECURITY.md  zshrc-aliases
.claude/: CLAUDE.md  settings.json  statusline-command.sh
.claude/agents/: pentester.md
.claude/commands/: capture-learning.md  capture-learning.ts  load-dynamic-context.md  load-dynamic-requirements.md  speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.claude/context/: CLAUDE.md
.claude/documentation/: README.md  agent-system.md  architecture.md  hook-system.md  quick-start.md  ufc-context-system.md  voice-system.md
.claude/hooks/: context-compression-hook.ts  load-dynamic-context.ts  load-dynamic-requirements.ts  session-start-hook.ts  stop-hook.ts  subagent-stop-hook.ts  user-prompt-submit-hook.ts
.claude/learnings/: 2025-09-09-commands-in-claude-commands-needed-proper-markdown.md
.claude/voice-server/: README.md  restart.sh  run-server.sh  server.ts  start.sh  status.sh  stop.sh
.github/workflows/: sync-upstream.yml
PAI_DIRECTORY/: .env-example  .mcp.json  settings.json  statusline-command.sh
PAI_DIRECTORY/agents/: architect.md  designer.md  engineer.md  pentester.md  researcher.md
PAI_DIRECTORY/commands/: capture-learning.md  load-dynamic-requirements.md  web-research.md
PAI_DIRECTORY/context/: CLAUDE.md
pai-agent/: Dockerfile  README.md  a2a_system.py  docker-compose.yml  graph_memory.py  main.py  mcp_server.py  pyproject.toml  rag_system.py  start.sh
(+36 files in other folders)
