[project]
name = "pai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "mcp>=1.14.1",
    "neo4j>=5.28.2",
    "openai>=1.108.2",
    "pgvector>=0.4.1",
    "pydantic-ai>=1.0.10",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.36.0",
]
